--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ",
+    "tw": "tailwindcss -i ./src/app/globals.css -o ./src/app/global.css --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,20 +15,20 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.1",
     "next": "13.4.13",
     "next-auth": "^4.22.4",
-    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.5.0"
+    "@grafbase/sdk": "^0.5.0",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
