--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": " next dev ",
     "tw": "tailwindcss -i ./src/app/globals.css -o ./src/app/global.css --watch",
     "build": "next build",
     "start": "next start",
@@ -15,6 +15,7 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "encoding": "^0.1.13",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "graphql-request": "^6.1.0",
