solve upload image

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ GOOGLE_CLIENT_SECRET =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
 NEXTAUTH_SECRET=iubzS2NsBnyB45BNdeLi2TQGav4lqyQAZbJmD/uTtSY=
 NEXTAUTH_URL = http://localhost:3000
 JWT_SECRET="asdasdasdasd"
+
+CLOUDINARY_NAME=dqnlzgy5x
+CLOUDINARY_KEY=338342959559832
+CLOUDINARY_SECRET=6CN63mzafDDY1qdxMD1K3DFci0Q
