--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.0",
     "next": "13.4.6",
     "next-auth": "^4.22.1",
+    "parse-options": "^1.0.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
