--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ GOOGLE_CLIENT_SECRET =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
 NEXTAUTH_SECRET=iubzS2NsBnyB45BNdeLi2TQGav4lqyQAZbJmD/uTtSY=
 NEXTAUTH_URL = http://localhost:3000
 JWT_SECRET="a secret lies within a very big ambition"
+HTTPS=true
